Make stream SSE a refresh notification channel